--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,14 @@ section {
     border-color: #39a6b2;
 }
 
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 .trainers {
     text-align: center;
 }
@@ -197,6 +205,21 @@ section {
     padding: 35px;
     float: left;
     width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25;
+}
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
 }
 
 
