--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ section {
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 26px;
-    margin-bottom: 25;
+    margin-bottom: 25px;
 }
 .trainer-bio p {
     font-size: 17px;
@@ -259,3 +259,4 @@ section {
 .contact-info a {
     color: #fce138;
 }
+
